[project]
name = "fastbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vilgefortz", email = "kek@qwe.ru" }
]
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/fastbot"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
